--- a/style.css
+++ b/style.css
@@ -8,20 +8,32 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
+}   
 
 .container {
-    padding: 2rem;
-    height: 18rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* background-color: #353535; */
+    /* padding: 2rem; */
+    border: 1px solid black;
     position: absolute;
     bottom: 0;
+    border: none;
+    border-radius: 15px;
 }
 
-button {
+.white {
+    position: relative;
     height: 13rem;
     width: 3rem;
     background-color: white;
+    border: 1px solid black;
+}
+
+.black {
+    position: absolute;
+    height: 7rem;
+    width: 2rem;
+    background-color: black;
+    left: 70%;
+    z-index: 1;
 }
