--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 
 body {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
-    background-color: #1e1e1e;
+    background: linear-gradient(#353535 0%, #1b1b1b 100%);
+    height: 100dvh;
 }   
 
 .mappingBtn {
@@ -21,20 +22,25 @@ body {
     border-radius: 15px;
     margin: 10rem;
     cursor: pointer;
-    box-shadow: 4px 4px 4px rgba(0,0,0,0.37);
-    background-color: white;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.37);
+    /* background-color: white; */
     transition: 0.3s;
 }
 
 .mappingBtn:hover {
-    background-color: #d4d4d4;
     transition: 0.3s;
-    box-shadow: 8px 8px 8px rgba(0,0,0,0.37);
+    box-shadow: 4px 4px 4px rgba(0,0,0,0.37);
+}
+
+.active {
+    background-color: #b8b8b8;
+    transition: 0.3s;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.37);
 }
 
 .container {
     display: flex;
-    background-color: #353535;
+    background: linear-gradient(#353535 0%, #1b1b1b 100%);
     padding: 2rem;
     border: 1px solid black;
     position: absolute;
@@ -62,4 +68,8 @@ body {
     left: 70%;
     z-index: 1;
     border-radius: 0 0 4px 4px;
+}
+
+.blue {
+    background-color: blue;
 }
