--- a/style.css
+++ b/style.css
@@ -32,12 +32,6 @@ body {
     box-shadow: 4px 4px 4px rgba(0,0,0,0.37);
 }
 
-.active {
-    background-color: #b8b8b8;
-    transition: 0.3s;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.37);
-}
-
 .container {
     display: flex;
     background: linear-gradient(#353535 0%, #1b1b1b 100%);
@@ -70,6 +64,12 @@ body {
     border-radius: 0 0 4px 4px;
 }
 
-.blue {
-    background-color: blue;
+.white-active {
+    background-color: rgb(146, 146, 146);
+    box-shadow: 0px 0px 50px 28px rgba(146, 146, 146, 0.285);
+}
+
+.black-active {
+    background-color: rgba(146, 146, 146, 0.325);
+    box-shadow: 0px 0px 50px 28px rgba(146, 146, 146, 0.325);
 }
